[package]
name = "hello-rocket"
version = "0.1.0"
authors = ["João Neto <joaopintoneto@gmail.com>"]
edition = "2018"

[dependencies]
tokio = { version = "1.3.0", features = ["fs", "io-util"] }
rocket = { version = "0.5.0-rc.1", features = ["json"] }
mongodb = { version = "2.0.1", default-features = false, features = ["async-std-runtime"] }
serde = { version = "1.0.130", features = ["derive"] }
jsonwebtoken = "8.0.1"
dotenv = "0.15.0"
chrono = { version = "0.4.19", features = ["serde"] }
bson = "2.0.1"
hmac = "0.12.1"
sha2 = "0.10.2"
lazy_static = "1.4.0"
